# graphite

./: Cargo.toml  README.md
src/: lib.rs
src/core/: array.rs  array2.rs  array3.rs  color.rs  convert.rs  dim.rs  interpolate.rs  mod.rs  num.rs  op.rs  ops.rs  scalar.rs
src/geometry/: bbox.rs  bound.rs  frame.rs  mod.rs  normal3.rs  point3.rs  ray3.rs  vector3.rs  warp.rs
src/geometry/transform/: affine3.rs  mod.rs  normalization2.rs  rotscale3.rs
