[package]
name = "graphite"
description = "Core numerical, vector, and geometric primitives and operations"
version = "0.1.0"
authors = ["Shashank Singh <sshashank124@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sshashank124/graphite"
keywords = ["math", "vector", "matrix", "geometry", "graphics"]
categories = ["game-development", "game-engines", "graphics", "mathematics", "rendering"]

[features]
f64 = []
serde-derive = ["serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
